ecmascript/parser/tests/test262-error-references/fail/f1ee13ed9e476d25.js.stderr
error: LineBreak cannot follow 'throw'
 --> $DIR/tests/test262-parser/fail/f1ee13ed9e476d25.js:2:5
  |
2 |  */ e
  |     ^

